# localflock

./: CMakeLists.txt  LICENSE  README.md
src/: localflock.cpp  lock_info.cpp  lock_info.h  protocol.cpp  protocol.h  support.cpp  support.h
tests/: bash.sh
